I applied OOP, now I need to add summaries

--- a/structured/configs/pln_config.json
+++ b/structured/configs/pln_config.json
@@ -19,5 +19,6 @@
         "osize":1,
         "conv_patch":5,
         "pool_patch":2,
-        "checkpoint_dir":"/home/mussaa/Downloads/AkeFiles/Files/project/Sipga_project/model/structured/logs/model_checkpoints"
+        "checkpoint_dir":"/home/mussaa/Downloads/AkeFiles/Files/project/Sipga_project/model/structured/logs/model_checkpoints",
+        "summary_dir":"/home/mussaa/Downloads/AkeFiles/Files/project/Sipga_project/model/structured/logs/graph_summaries"
 }
