--- a/structured/configs/pln_config.json
+++ b/structured/configs/pln_config.json
@@ -3,9 +3,9 @@
         "data_type":["id_s","affinity","coords","features"],
         "data_path": "/home/mussaa/Downloads/AkeFiles/Files/project/Sipga_project/chimera/preprocessed_data",
         "data_name": "general_set.hdf",
-        "batch_size": 20,
+        "batch_size": 40,
         "split_size":0.8,
-        "num_epochs":20,
+        "num_epochs":40,
         "learning_rate":1e-5,
         "max_to_keep":5,
         "state_size": [784],
@@ -22,7 +22,6 @@
         "checkpoint_dir":"/home/mussaa/Downloads/AkeFiles/Files/project_ver2/new_version/ProteinLigandPredictor/structured/logs/model_checkpoints",
         "summary_dir":"/home/mussaa/Downloads/AkeFiles/Files/project_ver2/new_version/ProteinLigandPredictor/structured/logs/graph_summaries",
         "model_dir":"/home/mussaa/Downloads/AkeFiles/Files/project_ver2/new_version/ProteinLigandPredictor/structured/saved_models",
-        "error_dir"
-
+        "error_dir":"/home/mussaa/Downloads/AkeFiles/Files/project_ver2/new_version/ProteinLigandPredictor/structured/logs/training_errors"
 }
 
