--- a/structured/configs/pln_config.json
+++ b/structured/configs/pln_config.json
@@ -1,9 +1,9 @@
 {
-        "datasets": ["training", "validation"],
+        "datasets": ["training", "validation", "testing"],
         "data_type":["id_s","affinity","coords","features"],
         "data_path": "/home/mussaa/Downloads/AkeFiles/Files/project/Sipga_project/chimera/preprocessed_data",
         "data_name": "general_set.hdf",
-        "batch_size": 60,
+        "batch_size": 2,
         "split_size":0.8,
         "num_epochs":65,
         "learning_rate":1e-5,
