--- a/structured/configs/pln_config.json
+++ b/structured/configs/pln_config.json
@@ -3,8 +3,7 @@
         "data_type":["id_s","affinity","coords","features"],
         "data_path": "/home/mussaa/Downloads/AkeFiles/Files/project/Sipga_project/chimera/preprocessed_data",
         "data_name": "general_set.hdf", 
-        "specific_test_name":"one_complex.hdf",
-        "only_test": true,
+        "specific_test_name":"test_Binh.hdf",
         "batch_size": 1,
         "split_size":0.8,
         "num_epochs":60,
