Fixed some bugs

--- a/structured/configs/pln_config.json
+++ b/structured/configs/pln_config.json
@@ -4,15 +4,14 @@
         "data_path": "/home/mussaa/Downloads/AkeFiles/Files/project/Sipga_project/chimera/preprocessed_data",
         "data_name": "general_set.hdf", 
         "specific_test_name":"test_Binh.hdf",
-        "only_test": true,
         "batch_size": 1,
         "split_size":0.8,
-        "num_epochs":60,
+        "num_epochs":10,
         "learning_rate":1e-5,
         "max_to_keep":10,
         "state_size": [784],
         "num_iter_per_epoch": 10,
-        "conv_channels":[32, 64, 128, 256],
+        "conv_channels":[64, 128, 256],
         "lmbda":0.001,
         "dense_size":[1000,500,200],
         "seed":123,
@@ -23,7 +22,7 @@
         "pool_patch":2,
         "checkpoint_dir":"/home/mussaa/Downloads/AkeFiles/Files/project_ver2/new_version/ProteinLigandPredictor/structured/logs/model_checkpoints",
         "summary_dir":"/home/mussaa/Downloads/AkeFiles/Files/project_ver2/new_version/ProteinLigandPredictor/structured/logs/graph_summaries",
-        "model_dir":"/home/mussaa/Downloads/AkeFiles/Files/project_ver2/new_version/ProteinLigandPredictor/structured/saved_models",
+        "model_dir":"/home/mussaa/Downloads/AkeFiles/Files/project_ver2/new_version/ProteinLigandPredictor/structured/trained_models/saved_models",
         "error_dir":"/home/mussaa/Downloads/AkeFiles/Files/project_ver2/new_version/ProteinLigandPredictor/structured/logs/training_errors",
         "testing_mode":true
 }
